--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
+@charset "UTF-8";
+@import "styles/_variables.scss";
+
 body {
   margin: 0;
   padding: 0;
+  position: fixed;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +15,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.root{
+  margin: 0;
+  padding: 0;
+  background: $bg-color-theme;
 }
