--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import "styles/_variables.scss";
 @import "styles/_mixins";
 @import "styles/header";
+@import "styles/toolbox";
 
 body {
   margin: 0;
