--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,12 @@
 //ALL
 $bg-color-theme: #222222;
+$mobile-threshold-width: 776px;
+$light-color-theme: #fafafa;
+//$fancy-color-theme: xxx
 
 //HEADER
 $head-bg-color-theme: #fafafa;
 $header-container-height: 70px;
+
+//TOOLBOX
+$tool-box-container-width: 25vw;
