--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 @import "styles/_mixins";
 @import "styles/header";
 @import "styles/toolbox";
+@import "styles/main-content";
 
 body {
   margin: 0;
