--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 //ALL
-$bg-color-theme: #222222;
+$bg-color-theme: #f1f1f1;
 $mobile-threshold-width: 776px;
 $light-color-theme: #fafafa;
+$dark-color-theme: #111111;
 //$fancy-color-theme: xxx
 
 //HEADER
@@ -9,4 +10,4 @@ $head-bg-color-theme: #fafafa;
 $header-container-height: 70px;
 
 //TOOLBOX
-$tool-box-container-width: 25vw;
+$tool-box-container-width: 15vw;
