--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,4 +10,8 @@ $head-bg-color-theme: #fafafa;
 $header-container-height: 70px;
 
 //TOOLBOX
-$tool-box-container-width: 15vw;
+$tool-box-container-width: 18vw;
+$tool-box-container-bg: #fafafa;
+
+//CONTENT
+$main-content-bg-color: #222222;
