--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -22,5 +22,10 @@
       }
     }
   }
+}
 
+@media screen and (min-width: $mobile-threshold-width){
+  .hamburger-wrapper{
+    visibility: hidden;
+  }
 }
