image gallery template

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@
 @import "styles/header";
 @import "styles/toolbox";
 @import "styles/main-content";
+@import "styles/image-gallery";
 
 body {
   margin: 0;
