--- a/src/styles/main-content.scss
+++ b/src/styles/main-content.scss
@@ -8,7 +8,6 @@
   background: $main-content-bg-color;
 
   .fun-canvas{
-    background: transparent!important;
-
+    background: $light-color-theme;
   }
 }
