--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 @import "styles/toolbox";
 @import "styles/main-content";
 @import "styles/image-gallery";
+@import "styles/mixins";
 
 body {
   margin: 0;
@@ -17,6 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
+
 
 }
 
@@ -31,4 +33,30 @@ code {
 
 @media screen and (min-width: $mobile-threshold-width){
   overflow-y: auto;
+}
+
+/*
+  Custom scrollbar
+ */
+
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 6px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $dark-color-theme;
+  border-radius: 10px
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #111111;
 }
