--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import '~bootstrap/scss/bootstrap.scss';
 @import "App";
 @import "styles/_variables.scss";
 @import "styles/_mixins";
