--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -50,8 +50,19 @@
 }
 
 
-
+/*
+  Gray-scaling an element(mostly img)
+ */
 @mixin gray-scale-filter($gray-percent){
   -webkit-filter: grayscale($gray-percent); /* Safari 6.0 - 9.0 */
   filter: grayscale($gray-percent);
+}
+
+/*
+  Zooming-in an img element
+ */
+@mixin zoom-in($zoom){
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
