--- a/src/styles/image-gallery.scss
+++ b/src/styles/image-gallery.scss
@@ -53,9 +53,10 @@
         border: solid 1px $silver-color-theme;
         background-size: cover;
         background-position: center;
+        overflow: hidden;
 
         img{
-          max-width: 400px;
+          max-width: 100%;
           max-height: 300px;
           cursor: pointer;
           background-size: cover;
@@ -66,11 +67,26 @@
 
           &:hover{
             @include gray-scale-filter(0%);
+            @include zoom-in(1.1);
           }
         }
 
         &:hover{
           border: solid 1px $dark-color-theme;;
+        }
+
+        .delete-image-container{
+          height: 0;
+          display: block;
+          position: relative;
+          top: 0;
+          z-index: 100;
+          left: calc(50% - 20px);
+
+          img{
+            width: 40px;
+            height: 40px;
+          }
         }
       }
 
@@ -81,6 +97,7 @@
 
     .image-gallery-list:not(:first-child){
       margin-top: 10px;
+
     }
 
   }
