deleting from image gallery

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,7 @@ $mobile-threshold-width: 776px;
 $light-color-theme: #fafafa;
 $dark-color-theme: #111111;
 $silver-color-theme:#C0C0C0;
+$small-desktop-max-width:1410px;
 //$fancy-color-theme: xxx
 
 //HEADER
