--- a/src/styles/toolbox.scss
+++ b/src/styles/toolbox.scss
@@ -33,6 +33,20 @@
           font-weight: 700;
         }
       }
+
+      @media screen and (max-width: $small-desktop-max-width) {
+
+        .drop-zone{
+          width: 110px;
+          height: 80px;
+
+
+          p {
+            font-size: 16px;
+            font-weight: 700;
+          }
+        }
+      }
     }
   }
 
@@ -66,3 +80,4 @@
     display: none;
   }
 }
+
