drag & drop skeleton

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $light-color-theme: #fafafa;
 $dark-color-theme: #111111;
 $silver-color-theme:#C0C0C0;
 $small-desktop-max-width:1410px;
+$fresh-color:#ef6c00;
 //$fancy-color-theme: xxx
 
 //HEADER
