info element about picked action

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 @import "styles/main-content";
 @import "styles/image-gallery";
 @import "styles/mixins";
+@import "styles/infobox";
 
 body {
   margin: 0;
