parameters box template

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,7 @@
 @import "styles/main-content";
 @import "styles/image-gallery";
 @import "styles/mixins";
-@import "styles/infobox";
+@import "styles/parameterbox";
 
 body {
   margin: 0;
