--- a/src/styles/parameterbox.scss
+++ b/src/styles/parameterbox.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-.parameters-container{
+.parameters-container {
   width: 100vw;
   height: calc(100vh - #{$header-container-height});
   background-color: transparent;
@@ -11,15 +11,15 @@
   transition: 0.9s ease;
   z-index: 250;
 
-  .parameters-header-container{
+  .parameters-header-container {
     width: 100%;
     font-weight: bolder;
     box-sizing: border-box;
     height: 35px;
-    background-color: transparent!important;
+    background-color: transparent !important;
     text-align: center;
 
-    .parameters-header{
+    .parameters-header {
       display: block;
       background-color: $light-color-theme;
       height: 100%;
@@ -31,7 +31,7 @@
     }
 
     @media screen and(min-width: $mobile-threshold-width) {
-      .parameters-header{
+      .parameters-header {
         margin: auto;
         width: 150px;
         height: 100%;
@@ -40,17 +40,45 @@
       }
     }
   }
-  &.active{
+  &.active {
     @include translate-box(0, 0);
 
-    .parameters-header{
+    .parameters-header {
       display: none;
       transition: 0.5s ease;
     }
   }
 
+  .parameters-remove-container {
+    background-color: $light-color-theme;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 60px;
+    top:60px;
+    font-size: 25pt;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: center;
+    border-radius: 10px;
+    transition: 0.6s ease;
 
-  .parameters-list{
+    span{
+      cursor: pointer;
+      display: block;
+      color:$fresh-color;
+    }
+
+    &:hover{
+      background-color: $fresh-color;
+      span{
+        color: $dark-color-theme;
+      }
+      cursor: pointer;
+    }
+  }
+
+  .parameters-list {
     height: calc(100vh - 35px - #{$header-container-height});
     width: 100%;
     background-color: $dark-color-theme;
