--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 @import "styles/image-gallery";
 @import "styles/mixins";
 @import "styles/parameterbox";
+@import "styles/elements";
 
 body {
   margin: 0;
