--- a/src/styles/parameterbox.scss
+++ b/src/styles/parameterbox.scss
@@ -10,7 +10,6 @@
   @include translate-box(0, calc(100vh - #{$header-container-height} - 35px));
   transition: 0.9s ease;
   z-index: 250;
-  opacity: 0.8;
 
   .parameters-header-container {
     width: 100%;
@@ -45,8 +44,10 @@
     @include translate-box(0, -35px);
 
     .parameters-header {
-      display: none;
       transition: 0.5s ease;
+      border-top:solid 2px $dark-color-theme;
+      border-left:solid 2px $dark-color-theme;
+      border-right:solid 2px $dark-color-theme;
     }
 
     .parameters-remove-container{
@@ -55,6 +56,7 @@
   }
 
   .parameters-remove-container {
+    display: none;
     background-color: $light-color-theme;
     width: 50px;
     height: 50px;
@@ -90,6 +92,7 @@
     background-color: $dark-color-theme;
     box-sizing: border-box;
     @include flex-box(row, center, flex-start, true);
+    opacity: 0.8;
 
     .single-parameter-container{
       width: auto;
