--- a/src/styles/main-content.scss
+++ b/src/styles/main-content.scss
@@ -19,7 +19,7 @@
     .main-canvas-action-box{
       visibility: hidden;
       max-width: 100%;
-      height: 10%;
+      height: 12%;
       position: absolute;
       right: 0;
       box-sizing: border-box;
@@ -31,22 +31,21 @@
         width:10%;
         height: 100%;
         right: 0;
-        padding: 3px;
+        padding: 8px;
         box-sizing: border-box;
         cursor: pointer;
-        margin-left: 5px;
-        margin-right: 5px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+        @include flex-box(column, center,center, true);
+        background: $silver-color-theme;
 
         &:hover{
-          background: $silver-color-theme;
+          background: lighten($silver-color-theme, 5%);
         }
         img{
           width: 100%;
           height: 100%;
           object-fit: contain;
           overflow: hidden;
+          display: block;
         }
       }
     }
