--- a/src/styles/parameterbox.scss
+++ b/src/styles/parameterbox.scss
@@ -45,12 +45,12 @@
 
     .parameters-header {
       transition: 0.5s ease;
-      border-top:solid 2px $dark-color-theme;
-      border-left:solid 2px $dark-color-theme;
-      border-right:solid 2px $dark-color-theme;
+      border-top: solid 2px $dark-color-theme;
+      border-left: solid 2px $dark-color-theme;
+      border-right: solid 2px $dark-color-theme;
     }
 
-    .parameters-remove-container{
+    .parameters-remove-container {
       visibility: visible;
     }
   }
@@ -62,7 +62,7 @@
     height: 50px;
     position: absolute;
     right: 100px;
-    top:60px;
+    top: 60px;
     font-size: 25pt;
     font-weight: 500;
     text-align: center;
@@ -71,15 +71,15 @@
     transition: 0.6s ease;
     visibility: hidden;
 
-    span{
+    span {
       cursor: pointer;
       display: block;
-      color:$fresh-color;
+      color: $fresh-color;
     }
 
-    &:hover{
+    &:hover {
       background-color: $fresh-color;
-      span{
+      span {
         color: $dark-color-theme;
       }
       cursor: pointer;
@@ -94,24 +94,59 @@
     @include flex-box(column, flex-start, center, true);
     opacity: 0.8;
 
-    .single-parameter-container{
+    .single-parameter-container {
       width: auto;
       background-color: transparent;
-      color:$light-color-theme;
+      color: $light-color-theme;
       padding: 12px;
       margin-top: 10px;
       opacity: 1;
       @include flex-box(column, center, center, true);
 
-      span{
+      span {
         margin: 15px;
         font-size: 16pt;
         font-weight: 500;
 
-
       }
-      input[type=range]{
+      input[type=range] {
         width: 700px;
+      }
+    }
+
+    .own-filter-container {
+      text-align: center;
+      color: $light-color-theme;
+      font-weight: 500;
+      font-size: 16pt;
+      .kernel-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        border: none;
+        color:$light-color-theme;
+
+        .single-kernel-value-container {
+          input {
+            background: transparent;
+            width: 60px;
+            height: 60px;
+            text-align: center;
+            color: $fresh-color;
+            font-weight: 700;
+            padding: 12px;
+            font-size: 16pt;
+            border: solid 1px $silver-color-theme;
+
+            &:focus {
+              border: solid 1px $fresh-color;
+            }
+
+          }
+        }
+      }
+      span{
+        margin-top: 10px;
       }
     }
   }
