--- a/src/styles/elements.scss
+++ b/src/styles/elements.scss
@@ -29,3 +29,35 @@ input[type=range]:focus {
 input[type=range]:focus::-webkit-slider-runnable-track {
   background: #ccc;
 }
+
+/*
+  Custom scrollbar
+ */
+
+/* width */
+::-webkit-scrollbar {
+  width: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  visibility: hidden;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $silver-color-theme;
+  //border-radius: 10px;
+  transition: 0.7s ease;
+  opacity: 0.8;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: darken($silver-color-theme, 15%);
+}
+
+::selection{
+  background: $fresh-color;
+}
