little changes + morphology init

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $bg-color-theme: #f1f1f1;
 $mobile-threshold-width: 776px;
 $light-color-theme: #fafafa;
 $dark-color-theme: #111111;
+$alt-dark-color-theme: #222222;
 $silver-color-theme:#C0C0C0;
 $small-desktop-max-width:1410px;
 $fresh-color:#ef6c00;
