--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -13,6 +13,7 @@
     font-size: 24pt;
     font-weight: 500;
     margin: 0 0 0 30px;
+    z-index: 100;
 
     span{
       text-shadow: 1px 1px 2px black;
