--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,7 +6,8 @@
   @include shadow-box(rgba(0,0,0,0.5), rgba(0,0,0,0.2));
 
   height: $header-container-height;
-  background: $head-bg-color-theme;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,255,255,1) 0%, rgba(34,34,34,0.5) 100%);
   width: 100vw;
 
   .title-container{
