--- a/src/styles/main-content.scss
+++ b/src/styles/main-content.scss
@@ -20,6 +20,7 @@
   .fun-canvas-container{
     position: absolute;
 
+
     &:hover{
       .main-canvas-action-box {
         visibility: visible;
@@ -65,7 +66,8 @@
     }
 
     .fun-canvas{
-      background: white;
+      background: $light-color-theme;
+      opacity: 0.8;
     }
   }
 
