--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,6 @@
 .root{
   margin: 0;
   padding: 0;
-  background: $bg-color-theme;
   width: 100vw;
   height: 100vh;
   @include flex-box(row, flex-start, start, true);
@@ -16,6 +15,8 @@
   height: calc(100vh - #{$header-container-height});
   width: 100vw;
   box-sizing: border-box;
+  background: transparent;
+
 }
 
 /*
