--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   position: fixed;
+  background: url("./assets/jpg/background.jpg");
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
